# learnOpenGL

./: .gitignore  CMakeLists.txt  helloWindow  script.sh
.cache/clangd/index/: glad.c.6BCF982A99F32EFB.idx  glad.h.BC16BAF745808ABE.idx  helloTriangle.cpp.6E6898F8F6D3318A.idx  helloWindow.cpp.501BD0268E729DEA.idx  khrplatform.h.41A93BB74034BAC0.idx
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: fragmentShader.glsl  vertexShader.glsl  vertexshader.glsl
src/: helloShader.cpp  helloTriangle.cpp  helloWindow.cpp
